--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>expiration-date-manager - 1.0.0-SNAPSHOT</title>
+    <title>code-with-quarkus - 1.0.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -144,7 +144,7 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>org.acme</code></li>
-                <li>ArtifactId: <code>expiration-date-manager</code></li>
+                <li>ArtifactId: <code>code-with-quarkus</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                 <li>Quarkus Version: <code>2.2.1.Final</code></li>
             </ul>
