--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>code-with-quarkus - 1.0.0-SNAPSHOT</title>
+    <title>expire-date-manager - 1.0.0-SNAPSHOT</title>
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -132,10 +132,10 @@
             <li>Play with the provided code located in <code>src/main/java</code>:</li>
         </ul>
                 <div class="provided-code">
-            <h3>RESTEasy Reactive</h3>
-            <p>Easily start your Reactive RESTful Web Services</p>
+            <h3>RESTEasy JAX-RS</h3>
+            <p>Easily start your RESTful Web Services</p>
             <p><code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code></p>
-            <p><a href="https://quarkus.io/guides/getting-started-reactive#reactive-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
+            <p><a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
         </div>
 
     </div>
@@ -144,20 +144,15 @@
             <h3>Application</h3>
             <ul>
                 <li>GroupId: <code>org.acme</code></li>
-                <li>ArtifactId: <code>code-with-quarkus</code></li>
+                <li>ArtifactId: <code>expire-date-manager</code></li>
                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                <li>Quarkus Version: <code>2.2.1.Final</code></li>
+                <li>Quarkus Version: <code>2.2.2.Final</code></li>
             </ul>
         </div>
         <div class="right-section">
             <h3>Do you like Quarkus?</h3>
             <ul>
                 <li>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Selected extensions guides</h3>
-            <ul>
             </ul>
         </div>
         <div class="right-section">
